<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_id"
        android:text="@string/id_textid"
        android:textSize="18dp"
        android:layout_margin="8dp"
        android:textStyle="bold"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_houseDescription"
        android:text="@string/descriere_edittext_house"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edittext_locationOwner"
        android:text="@string/locatie_si_nume_proprietar"
        android:layout_margin="5dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:backgroundTint="#3CB4E3"
        android:id="@+id/button_edit"
        android:layout_weight="2"
        android:text="@string/editare_btnn"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        android:layout_height="wrap_content">
        <Button
            android:backgroundTint="#4456BD"
            android:layout_margin="2dp"
            android:id="@+id/button_delete"
            android:layout_weight="2"
            android:text="@string/stergere_btndelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    <View
        android:layout_margin="5dp"
        android:backgroundTint="#E829EDED"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>