<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorfeedback"
    tools:context=".SignUpCreateNewAccountActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signUp_name"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signUp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_tiet_signup" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signUp_email"
        android:layout_width="347dp"
        android:layout_height="54dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_tiet_signup" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signUp_password"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_tiet_signup"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signUp_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#673AB7"
        android:text="@string/create_account_tiet"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signUp_rePassword"
        android:layout_width="347dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signUp_rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retype_password_tiet_signup"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_signUp_text"
        android:layout_width="94dp"
        android:layout_height="28dp"
android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="320dp"


        android:layout_marginEnd="284dp"
        android:text="@string/you_are_tvsignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_signUp_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signUp_text"
        tools:ignore="MissingConstraints"

        >

        <RadioButton
            android:id="@+id/rb_signUp_client"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:text="@string/client_rbsignup"
            android:textColor="@color/black"

            />

        <RadioButton
            android:id="@+id/rb_signUp_owner"
            android:layout_width="78dp"
            android:layout_height="50dp"
            android:text="@string/owner_rb"
            android:textColor="@color/black"

            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>