<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="407dp"
        android:layout_height="154dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/rentt"
        app:layout_constraintStart_toStartOf="parent"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_email"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_add_email"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:hint="@string/add_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_password"
        android:layout_width="344dp"
        android:layout_height="61dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_add_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_main_signIn"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/main_login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_main_signIn"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:text="@string/main_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
android:background="@drawable/buttonsign"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_main_signInCreate"
        android:layout_width="184dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_signInCreate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
android:textColor="@color/black"

        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_main_signInCreate"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_signUp"
        android:background="@drawable/buttonsign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"

        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>